server/kubernetes/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cyoa
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: cyoa
  name: cyoa-server
  labels:
    app: cyoa-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cyoa-server
  template:
    metadata:
      labels:
        app: cyoa-server
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: type
                operator: In
                values:
                - storage
      containers:
      - env:
        - name: DB_FILE
          value: /data/cyoa.db
        - name: SECRET_ACCESS_KEY
          valueFrom:
            secretKeyRef:
              key: secret_access_key.secret
              name: cyoa-secret
        - name: SECRET_SESSION_KEY
          valueFrom:
            secretKeyRef:
              key: secret_session_key.secret
              name: cyoa-secret
        - name: SQID_SECRET_ALPHABET
          valueFrom:
            secretKeyRef:
              key: sqid_alphabet.secret
              name: cyoa-secret
        - name: GOOGLE_SIGN_IN_CLIENT_ID
          valueFrom:
            secretKeyRef:
              key: gauth_client.secret
              name: cyoa-secret
        - name: GOOGLE_SIGN_IN_CLIENT_SECRET
          valueFrom:
            secretKeyRef:
              key: gauth_token.secret
              name: cyoa-secret
        - name: CORS_DOMAIN
          valueFrom:
            secretKeyRef:
              key: cors_domain.secret
              name: cyoa-secret
        - name: S3_ENDPOINT
          valueFrom:
            secretKeyRef:
              key: s3_endpoint.secret
              name: cyoa-secret
        - name: STORAGE_URL
          valueFrom:
            secretKeyRef:
              key: storage_url.secret
              name: cyoa-secret
        - name: STORY_BUCKET_NAME
          value: cyoa-stories
        - name: ASSET_BUCKET_NAME
          value: cyoa-assets
        image: zrui98/cyoa-server
        imagePullPolicy: IfNotPresent
        name: cyoa-server
        volumeMounts:
        - mountPath: /data
          name: cyoa-sqlite
  volumeClaimTemplates:
  - metadata:
      name: cyoa-sqlite
      annotations:
        backup.kubernetes.io/deltas: P1D P7D
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 3Gi
---
kind: Service
apiVersion: v1
metadata:
  name: cyoa
  namespace: cyoa
  labels:
    app: cyoa-server
spec:
  selector:
    app: cyoa-server
  ports:
  - protocol: TCP
    port: 3000
    name: web
  clusterIP: None
