server/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cyoa
  namespace: cyoa
  annotations:
    traefik.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: api.cyoa.zrui.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cyoa
                port:
                  number: 3000
  tls:
    - secretName: api-cyoa-tls-secret
      hosts:
        - api.cyoa.zrui.dev
